--- a/src/main/resources/templates/lec02.html
+++ b/src/main/resources/templates/lec02.html
@@ -7,7 +7,18 @@
 </head>
 
 <body>
+  <a href="/logout">ログアウト</a>
   <h1>Lec02 GET!</h1>
+  <div th:if="${room}">
+    エントリー
+    <ul>
+      <!--roomオブジェクトのroomNoというフィールドを指定している-->
+      <!--<li>RoomNo:[[${room.roomNo}]]</li>-->
+      <!--eachは所謂for each．この場合roomオブジェクトのusersフィールドにあるすべてのデータを一通り表示する
+        thが指定されているので[]が不要になる-->
+      <li th:each="user : ${room.users}">[[${user}]]</li>
+    </ul>
+  </div>
   <div>
     [[${name}]]
   </div>
